k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triplogs-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: triplogs-backend
  template:
    metadata:
      labels:
        app: triplogs-backend
    spec:
      containers:
        - name: triplogs-backend
          image: ghcr.io/gabriel04alves/triplogs-backend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
