k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triplogs-backend-service
  namespace: triplogs-prod
spec:
  type: LoadBalancer
  selector:
    app: triplogs-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
